Fix strange alignment of Desktop File attachment link in Firefox

--- a/scss/base/_file_upload.scss
+++ b/scss/base/_file_upload.scss
@@ -5,6 +5,7 @@
     overflow: hidden;
     display: inline-block;
     position: relative;
+    vertical-align: middle;
 
     input {
         -moz-transform: translate(-430px, 0pt) scale(4);
